fixtures/errors/for_in_non_enumerable.js
for (let x in 1) {
  console.log(x);
}
